--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -1,8 +1,49 @@
 <header class = 'nav' >
   <nav class = 'nav-menu'>
+    <input type="button" value="day" onclick="day_night_handler(this)">
     <a href='{{ absURL "" }}' class = 'nav-brand nav_item'>{{ .Site.Title }}</a>
     <div class = 'nav_bar-wrap'>
       <div class = 'nav_bar'></div>
     </div>
   </nav>
 </header>
+
+<head>
+  <meta charset="UTF-8">
+  <title>day_night</title>
+  <script>
+      // 링크 색 바꾸기
+      function LinkSetColor(color){
+          var alist = document.querySelectorAll('a');
+          for(var i = 0; i < alist.length; i++)
+              alist[i].style.color = color;
+      }
+
+      // 바디 글자색 바꾸기
+      function BodySetColor(color){
+          document.querySelector('body').style.color = color;
+      }
+
+      // 바디 배경색 바꾸기
+      function BodySetBackgroundColor(color){
+          document.querySelector('body').style.backgroundColor = color;
+      }
+
+      // 주간, 야간모드
+      function day_night_handler(self) {
+          var target = document.querySelector('body');
+          if (self.value == 'day') {
+              BodySetBackgroundColor('RGB(26,36,54)');
+              BodySetColor('white');
+              LinkSetColor('powderblue')
+              self.value = 'night';
+          }
+          else {
+              BodySetBackgroundColor('white');
+              BodySetColor('black');
+              LinkSetColor('blue')
+              self.value = 'day';
+          }
+      }
+  </script>
+</head>
