--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -1,12 +1,24 @@
 <header class = 'nav' >
   <nav class = 'nav-menu'>
-    <input type="button" value="day" onclick="day_night_handler(this)">
+
     <a href='{{ absURL "" }}' class = 'nav-brand nav_item'>{{ .Site.Title }}</a>
     <div class = 'nav_bar-wrap'>
       <div class = 'nav_bar'></div>
     </div>
   </nav>
+  <input type="button" value="day" class="button" onclick="day_night_handler(this)">
 </header>
+
+<style>
+  .button {
+  border:2px solid #ff9900;    /*---테두리 정의---*/
+  background-Color:#000000;   /*--백그라운드 정의---*/
+  font:20px 나눔고딕;      /*--폰트 정의---*/
+  font-weight:bold;   /*--폰트 굵기---*/
+  color:#ff9900;    /*--폰트 색깔---*/
+  width:200;height:70;  /*--버튼 크기---*/
+  }
+  </style>
 
 <head>
   <meta charset="UTF-8">
