--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -6,14 +6,14 @@
       <div class = 'nav_bar'></div>
     </div>
   </nav>
-  <input type="button" value="day" class="button" onclick="day_night_handler(this)">
+  <input type="button" value="Click to Watch in Dark Mode" class="button" onclick="dark_light_handler(this)">
 </header>
 
 <style>
   .button {
   border:2px solid #ff9900;    /*---테두리 정의---*/
   background-Color:#000000;   /*--백그라운드 정의---*/
-  font:20px 나눔고딕;      /*--폰트 정의---*/
+  font:16px 나눔고딕;      /*--폰트 정의---*/
   font-weight:bold;   /*--폰트 굵기---*/
   color:#ff9900;    /*--폰트 색깔---*/
   width:200;height:70;  /*--버튼 크기---*/
@@ -42,19 +42,19 @@
       }
 
       // 주간, 야간모드
-      function day_night_handler(self) {
+      function dark_light_handler(self) {
           var target = document.querySelector('body');
-          if (self.value == 'day') {
+          if (self.value == 'Click to Watch in Dark Mode') {
               BodySetBackgroundColor('RGB(26,36,54)');
               BodySetColor('white');
               LinkSetColor('powderblue')
-              self.value = 'night';
+              self.value = 'Click to Watch in Light Mode';
           }
           else {
               BodySetBackgroundColor('white');
               BodySetColor('black');
               LinkSetColor('blue')
-              self.value = 'day';
+              self.value = 'Click to Watch in Dark Mode';
           }
       }
   </script>
