--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -6,11 +6,11 @@
       <div class = 'nav_bar'></div>
     </div>
   </nav>
-  <input type="button" value="Click to Watch in Dark Mode" class="button" onclick="dark_light_handler(this)">
+  <p><button id="theme-toggle">Click to Switch between Light and Dark Mode</button></p>
 </header>
 
 <style>
-  .button {
+  button {
   border:2px solid #ff9900;    /*---테두리 정의---*/
   background-Color:#000000;   /*--백그라운드 정의---*/
   font:16px 나눔고딕;      /*--폰트 정의---*/
@@ -18,44 +18,42 @@
   color:#ff9900;    /*--폰트 색깔---*/
   width:200;height:70;  /*--버튼 크기---*/
   }
+
+  body {
+	color: rgb(12, 14, 29); 
+	background-color: white;
+}
+body.dark {
+	color: white; 
+	background-color: rgb(12, 14, 29);
+}
   </style>
 
-<head>
-  <meta charset="UTF-8">
-  <title>day_night</title>
-  <script>
-      // 링크 색 바꾸기
-      function LinkSetColor(color){
-          var alist = document.querySelectorAll('a');
-          for(var i = 0; i < alist.length; i++)
-              alist[i].style.color = color;
-      }
+<script>
+  var darkMode = false;
 
-      // 바디 글자색 바꾸기
-      function BodySetColor(color){
-          document.querySelector('body').style.color = color;
-      }
+// default to system setting
+if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+	darkMode = true;
+}
 
-      // 바디 배경색 바꾸기
-      function BodySetBackgroundColor(color){
-          document.querySelector('body').style.backgroundColor = color;
-      }
+// preference from localStorage should overwrite
+if (localStorage.getItem('theme') === 'dark') {
+	darkMode = true;
+} else if (localStorage.getItem('theme') === 'light') {
+	darkMode = false;
+}
 
-      // 주간, 야간모드
-      function dark_light_handler(self) {
-          var target = document.querySelector('body');
-          if (self.value == 'Click to Watch in Dark Mode') {
-              BodySetBackgroundColor('RGB(26,36,54)');
-              BodySetColor('white');
-              LinkSetColor('powderblue')
-              self.value = 'Click to Watch in Light Mode';
-          }
-          else {
-              BodySetBackgroundColor('white');
-              BodySetColor('black');
-              LinkSetColor('blue')
-              self.value = 'Click to Watch in Dark Mode';
-          }
-      }
-  </script>
-</head>
+if (darkMode) {
+	document.body.classList.toggle('dark');
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+
+    document.getElementById('theme-toggle').addEventListener('click', () => {
+		document.body.classList.toggle('dark');
+    	localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+	});
+
+});
+</script>
