--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -10,6 +10,11 @@
 </header>
 
 <style>
+  .nav_bar-wrap {
+  background-Color:orange;
+  color: orange;
+  }
+
   button {
   border:2px solid #ff9900;    /*---테두리 정의---*/
   background-Color:#000000;   /*--백그라운드 정의---*/
@@ -24,7 +29,7 @@
 	background-color: white;
 }
 body.dark {
-	color: white; 
+	color: rgb(255, 191, 0); 
 	background-color: rgb(12, 14, 29);
 }
   </style>
