--- a/themes/hugo-swift-theme/layouts/partials/header.html
+++ b/themes/hugo-swift-theme/layouts/partials/header.html
@@ -38,7 +38,7 @@ body.dark {
   var darkMode = false;
 
 // default to system setting
-if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+if (window.matchMedia('(prefers-color-scheme: light)').matches) {
 	darkMode = true;
 }
 
