--- a/themes/hugo-swift-theme/layouts/_default/single.html
+++ b/themes/hugo-swift-theme/layouts/_default/single.html
@@ -17,6 +17,20 @@
 </section>
 {{- end }}
 <div class = '{{ if .Params.full }}wrap post{{ else }}post{{ end }}'>
+  <div class="date">
+    {{ $dateFormat := $.Site.Params.dateFormat | default "Mon, 02 Jan 2006 15:04 MST" }}
+    {{ $publishDate := .PublishDate }}
+    {{ $Date := .Date }}
+    <strong aria-hidden="true"> Created date: </strong>{{ $Date.Format $dateFormat }}
+    <br>
+    <strong aria-hidden="true">Publish date: </strong>{{ $publishDate.Format $dateFormat }}
+    {{ with .Lastmod }}
+      {{ if gt . $publishDate }}
+        <br>
+        <strong aria-hidden="true">Last updated: </strong>{{ .Format $dateFormat }}
+      {{ end }}
+    {{ end }}
+  </div>
   <article class='post_content'>
     {{- .Content }}
     {{ if in $p.mainSections .Type }}
