--- a/themes/hugo-swift-theme/layouts/partials/head.html
+++ b/themes/hugo-swift-theme/layouts/partials/head.html
@@ -10,7 +10,8 @@
   <meta name = 'viewport' content = 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
   <meta http-equiv = 'X-UA-Compatible' content = 'IE=edge'>
   <meta property="og:image" content="https://github.com/shcDE/pictures/blob/main/images_for_blog/business-gb1f55b807_1920.jpg?raw=true/{{ with .Params.Image }}{{ . }}{{ else }}{{ with .Site.Params.Image }}{{ . }}{{ end }}{{ end }}">
-
+  <meta property="og:description" content="schDE의 개발 지식 정리용 블로그입니다." /> 
+  <meta name="description" content="안녕하세요. schDE의 개발 지식 정리용 블로그입니다.">
   {{- if (ne hugo.Environment "development") }}
   {{- partial "analytics" . }}
   {{- end }}
