--- a/themes/hugo-swift-theme/layouts/partials/head.html
+++ b/themes/hugo-swift-theme/layouts/partials/head.html
@@ -27,6 +27,7 @@
   <!-- 저장된 경로가 static/css/prism.css이 아니라면 src 경로를 수정해야한다. -->
   <script defer language="javascript" type="text/javascript"  src="{{ "/js/prism.js" | urlize | relURL }}"></script>
   <!-- 저장된 경로가 static/js/prism.js이 아니라면 src 경로를 수정해야한다. -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3031042205762577" crossorigin="anonymous"></script>
 {{end}}
 
 </head>
